# 2DGameEngine

./: CMakeLists.txt  build-linux.sh  build-win.bat
engine/: CMakeLists.txt
engine/src/: pch.cpp  pch.h
engine/src/assets/: animation.h  asset.h  audio.h  font.h  registry.h  texture.h  tilemap.h
engine/src/core/: dispatcher.h  engine.cpp  engine.h  entry.h  event.h  input.cpp  input.h  typeid.h
engine/src/ecs/: ecs.h  entity.h  registry.h  scene.h  system.h
engine/src/ecs/components/: common.h  graphics.h  physics.h
engine/src/ecs/systems/: frameAnimationSystem.h  rigidbodySystem.h  spriteRendererSystem.h  testSystem.h  textRendererSystem.h  tilemapRenderSystem.h
engine/src/events/: system.h
engine/src/math/: vec2.h
engine/src/physics/: rigidbody2D.h
game/: CMakeLists.txt
game/src/: game.cpp
